--- a/.gitignore
+++ b/.gitignore
@@ -243,3 +243,6 @@ pyrightconfig.json
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,python
+
+time*
+memory*
