--- a/.gitignore
+++ b/.gitignore
@@ -248,3 +248,6 @@ pyrightconfig.json
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,python
+
+time*
+memory*
